[package]
name = "srrust"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.8"
anyhow = { version = "1.0.89", features = ["backtrace"] }
bincode = "1.3.3"
bytes_parser = "0.1.5"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
nix = { version = "0.29.0", features = ["event"] }
quick-xml = "0.37.1"
serde = { version = "1.0.210", features = ["alloc", "derive"] }
socket2 = { version = "0.5.7", features = ["all"] }
ureq = { version = "2.12.1", features = ["native-certs"] }
